engine-net-2/examples/Errors/AttributeTransientObjectUnknown.grs
new graph "Rules.grg"

exec (n:N,e:E,c:C,tc:TC)=initExtended ;> { tc.b = 45 }

quit
